--- a/Game_Of_Thrones.qmd
+++ b/Game_Of_Thrones.qmd
@@ -1,31 +1,38 @@
 ---
-title: "Game of Thrones"
+title: "Automation of GOT"
 author: "Sevinj Guluyeva"
-format: html
-editor: visual
+date: today
+format: 
+  html:
+    toc: true
+    toc-depth: 2
+    smooth-scroll: true
+number-sections: true
+number-depth: 2
+title-block-banner: true
+execute:
+  echo: fenced
+params:
+   season: 2
 ---
 
 ## Game Of Thrones
 
 ```{r}
-file_path <- "C:/Users/sevinj/Desktop/Downlands/Data/season_1.RData"
-season_number <- ifelse(grepl("season_", file_path), gsub(".*season_(\\d+).*", "\\1", file_path), "Unknown")
-heading <- ifelse(season_number != "Unknown", paste0("Season ", season_number, " summary"), "Unknown")
-
-cat(heading)
-
-load(file_path)
-
-
-```
-
-```{r}
-plot(season_data$viewers, type="l", col="blue", lwd=5, xlab = "Episode number", ylab = "1st day TV viewers in the US (millions)")
+load(paste0("C:\\Users\\sevinjguluyeva\\Desktop\\RRcourse2023\\Data\\season_", params$season, ".RData"))
 ```
 
 ```{r}
 avg_viewership <- mean(season_data$viewers)
 
+nameofseason <- season_data$title[season_data$viewers == max(season_data$viewers)]
+descriptionofseason <- season_data$description[season_data$viewers == max(season_data$viewers)]
+
+cat("The most popular episode of the season was", nameofseason, "in which:", "\n", "\n", descriptionofseason)
+```
+
+```{r}
+plot(season_data$viewers, type="l", col="red", lwd=5, xlab = "Episode number", ylab = "1st day TV viewers in the US (millions)")
 ```
 
 ```{r}
